--- a/FinalProject_Group019-FA24.ipynb
+++ b/FinalProject_Group019-FA24.ipynb
@@ -857,7 +857,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "summary of author bestsellers results here"
+    "Overall, we can see that a logarithmic transformation doesn't make a significant difference in the shape of the graph. The graph still depicts a weak positive correlation, although now, that weak correlation gets stronger as the graph moves to the right. This may be enough to imply a sense of loose correlation between these two factors, but certainly not enough to prove significance. This means that on a general note, having more books on the list does increase your ranking on the list, but this is not always the case. There is also a concentration of books on the list who have only been there for a day, and have average rankings throughout the entire range of the graph. Therefore, this factor yields an inconclusive result overall."
    ]
   },
   {
