--- a/FinalProject_Group019-FA24.ipynb
+++ b/FinalProject_Group019-FA24.ipynb
@@ -430,7 +430,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "At different stages of the data collection process, the data pertaining to certain factors was accumulated in separate CSV files (NYTInfo_Revised.csv, NYTinfo_processed.csv, etc.). However, the clean, final dataset containing all 13 factors required to perform our analysis was accumulated in Bookinfo.csv, shown above. "
+    "At different stages of the data collection process, the data pertaining to certain factors was accumulated in separate CSV files (NYTInfo_Revised.csv, NYTinfo_processed.csv, etc.). However, the clean, final dataset containing all 13 factors required to perform our analysis was assembled in Bookinfo.csv, shown above. "
    ]
   },
   {
