added in contributions

--- a/FinalProject_Group019-FA24.ipynb
+++ b/FinalProject_Group019-FA24.ipynb
@@ -205,7 +205,6 @@
     "                            book[\"publisher\"],\n",
     "                            book[\"weeks_on_list\"]\n",
     "                        ])\n",
-    "                    print(f\"Successfully saved data for {date_str}\")\n",
     "                else:\n",
     "                    print(f\"Error on {date_str}: {response.status_code} - {response.text}\")\n",
     "            except Exception as e:\n",
@@ -1156,8 +1155,16 @@
     "\n",
     "# Team Contributions\n",
     "\n",
-    "Speficy who did what.  This should be pretty granular, perhaps bullet points, no more than a few sentences per person."
+    "Neha Nair- Completed the \"Hypothesis\" and \"Research Question\" sections, and half of the \"Discussion and Conclusion\" section. Collected and cleaned data for the title, author, publisher, year on list, rank, and weeks on list columns in the final dataset, and created and analyzed the Random Forest Model in the EDA section. \n",
+    "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
