updated various parts of the project

--- a/FinalProject_Group019-FA24.ipynb
+++ b/FinalProject_Group019-FA24.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# COGS 108 - Final Project (change this to your project's title)\n",
+    "# COGS 108 - Final Project: Cracking the Code to New York Times Bestseller Success\n",
     "\n",
     "# Permissions\n",
     "\n",
@@ -127,7 +127,7 @@
     "\n",
     "For the \"appearance on a celebrity book club list\" variable, we iterated through Bookinfo.csv to check whether each book had appeared on a celebrity's book club list. Specifically, we were checking appearances in Reese Witherspoon and Oprah Winfrey's book club lists. The data is stored as a column of booleans corresponding to each title on the \"New York Times Bestseller\" list.\n",
     "\n",
-    "For the Goodreads data, we first obtained all the unique titles in the Bookinfo.csv file. Then, we iterated through the titles using a web scraper to obtain the publication date/season, the number of awards recieved, and the aggregated rating of the book. The publication date/season data is in a string format (either Spring, Summer, or Fall), while the \"# of awards\" and \"average rating on Goodreads\" data is in a float format.    \n",
+    "For the Goodreads data, we first obtained all the unique titles in the Bookinfo.csv file. Then, we iterated through the titles using a web scraper to obtain the publication date/season, the number of awards recieved, and the aggregated rating of the book. The publication date/season data is in a string format (either Spring (January-April), Summer (May-August), or Fall (September-December)), while the \"# of awards\" and \"average rating on Goodreads\" data is in a float format.    \n",
     "\n",
     "Below is a collection of links from which we pulled our data:\n",
     "- Book Title (https://www.nytimes.com/books/best-sellers/2020/01/05/paperback-nonfiction/)\n",
@@ -1171,26 +1171,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Conclusion of EDA here will update later"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## ETC AD NASEUM\n",
-    "\n",
-    "Some more words and stuff.  Remember notebooks work best if you interleave the code that generates a result with properly annotate figures and text that puts these results into context."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## YOUR CODE HERE\n",
-    "## FEEL FREE TO ADD MULTIPLE CELLS PER SECTION"
+    "#### EDA Summary\n",
+    "Our exploratory data analysis provides valuable insights into the factors influencing the rank of novels on the \"New York Times Bestsellers\" List. The Random Forest model identified the number of an author’s previous bestsellers as the most significant predictor. Ratings, awards count, and alignment with current contexts also demonstrated moderate influence, suggesting these factors can contribute to a novel’s success. However, being featured on a celebrity reading list showed negligible importance, challenging assumptions about its impact on bestseller rankings. These findings suggest that publishers should strategically focus on promoting works by authors with proven success while emphasizing quality and cultural relevance to maximize their novels' ranking potential."
    ]
   },
   {
@@ -1231,15 +1213,10 @@
     "\n",
     "# Team Contributions\n",
     "\n",
-    "Neha Nair- Completed the \"Hypothesis\" and \"Research Question\" sections, and half of the \"Discussion and Conclusion\" section. Collected and cleaned data for the title, author, publisher, year on list, rank, and weeks on list columns in the final dataset, and created and analyzed the Random Forest Model in the EDA section. "
+    "Neha Nair - Completed the \"Hypothesis\" and \"Research Question\" sections, and half of the \"Discussion and Conclusion\" section. Collected and cleaned data for the title, author, publisher, year on list, rank, and weeks on list columns in the final dataset, and created and analyzed the Random Forest Model in the EDA section. \n",
+    "\n",
+    "Advika Shankar - Collected and Cleaned data for the Goodreads ratings factor and Awards won factor in the final data set, Did the Team expectations and Schedule sections in prior assignments, organized EDA and expanded on various factors, and wrote the introductions and summary for the EDA"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
