--- a/FinalProject_Group019-FA24.ipynb
+++ b/FinalProject_Group019-FA24.ipynb
@@ -1215,7 +1215,9 @@
     "\n",
     "Neha Nair - Completed the \"Hypothesis\" and \"Research Question\" sections, and half of the \"Discussion and Conclusion\" section. Collected and cleaned data for the title, author, publisher, year on list, rank, and weeks on list columns in the final dataset, and created and analyzed the Random Forest Model in the EDA section. \n",
     "\n",
-    "Advika Shankar - Collected and Cleaned data for the Goodreads ratings factor and Awards won factor in the final data set, Did the Team expectations and Schedule sections in prior assignments, organized EDA and expanded on various factors, and wrote the introductions and summary for the EDA"
+    "Advika Shankar - Collected and Cleaned data for the Goodreads ratings factor and Awards won factor in the final data set, Did the Team expectations and Schedule sections in prior assignments, organized EDA and expanded on various factors, and wrote the introductions and summary for the EDA\n",
+    "\n",
+    "Satya Rajendra - Did Data section for the project project proposal, Collected data for whether a book was on a celebrity booklist, did EDA for books on a celebrity booklist vs. books that were not on the booklist"
    ]
   }
  ],
