update contributions section

--- a/FinalProject_Group019-FA24.ipynb
+++ b/FinalProject_Group019-FA24.ipynb
@@ -1219,7 +1219,9 @@
     "\n",
     "Advika Shankar - Collected and Cleaned data for the Goodreads ratings factor and Awards won factor in the final data set, Did the Team expectations and Schedule sections in prior assignments, organized EDA and expanded on various factors, and wrote the introductions and summary for the EDA\n",
     "\n",
-    "Satya Rajendra - Did Data section for the project project proposal, Collected data for whether a book was on a celebrity booklist, did EDA for books on a celebrity booklist vs. books that were not on the booklist"
+    "Satya Rajendra - Did Data section for the project project proposal, Collected data for whether a book was on a celebrity booklist, did EDA for books on a celebrity booklist vs. books that were not on the booklist\n",
+    "\n",
+    "Navyaa Gupta - Did ethics and privacy section for the project proposal, Collected data for whether a book had current context, did EDA for books with current context vs. books without current context, worked on the conlculsion for the final project.",
    ]
   }
  ],
