update contributions section

--- a/FinalProject_Group019-FA24.ipynb
+++ b/FinalProject_Group019-FA24.ipynb
@@ -1221,7 +1221,7 @@
     "\n",
     "Satya Rajendra - Did Data section for the project project proposal, Collected data for whether a book was on a celebrity booklist, did EDA for books on a celebrity booklist vs. books that were not on the booklist\n",
     "\n",
-    "Navyaa Gupta - Did ethics and privacy section for the project proposal, Collected data for whether a book had current context, did EDA for books with current context vs. books without current context, worked on the conlculsion for the final project.",
+    "Navyaa Gupta - Did ethics and privacy section for the project proposal, Collected data for whether a book had current context, did EDA for books with current context vs. books without current context, worked on the conlculsion for the final project."
    ]
   }
  ],
