added video link

--- a/FinalProject_Group019-FA24.ipynb
+++ b/FinalProject_Group019-FA24.ipynb
@@ -13,6 +13,9 @@
     "* [ X ] YES - make available\n",
     "* [  ] NO - keep private\n",
     "\n",
+    "# Link to Video\n",
+    "https://drive.google.com/file/d/17SuhZOdvUF3fTm5ljRySpJFye967HaXq/view?usp=sharing \n",
+    "\n",
     "# Names\n",
     "\n",
     "- Satya Rajendra\n",
