--- a/FinalProject_Group019-FA24.ipynb
+++ b/FinalProject_Group019-FA24.ipynb
@@ -1230,7 +1230,7 @@
     "\n",
     "Satya Rajendra - Did Data section for the project proposal, Collected data for whether a book was on a celebrity booklist, did EDA for books on a celebrity booklist vs. books that were not on the booklist\n",
     "\n",
-    "Pranav Soma - Did Background and Prior Work section for the project project proposal, performed data collection and wrangling for the maximum number of contiguous weeks as well as number of previous Author bestsellers, analyzed the relationship between average ranking and max booksellers, and wrote the Abstract.\n",
+    "Pranav Soma - Did Background and Prior Work section for the project proposal, performed data collection and wrangling for the maximum number of contiguous weeks as well as number of previous Author bestsellers, analyzed the relationship between average ranking and max booksellers, and wrote the Abstract.\n",
     "\n",
     "Navyaa Gupta - Did ethics and privacy section for the project proposal, Collected data for whether a book had current context, did EDA for books with current context vs. books without current context, worked on the conclusion for the final project."
    ]
