minor edits to data section

--- a/FinalProject_Group019-FA24.ipynb
+++ b/FinalProject_Group019-FA24.ipynb
@@ -333,7 +333,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The above cells are not run because they were used in the preprocessing/data collection steps of our project, and doing so would repopulate or interfere with the data already in the NYTInfo_Revised.csv file. "
+    "The above cells are not run because they were used in the preprocessing/data collection steps of our project, and doing so would repopulate or interfere with the data already in our finalized dataset. "
    ]
   },
   {
