minor edits to beginning of EDA section

--- a/FinalProject_Group019-FA24.ipynb
+++ b/FinalProject_Group019-FA24.ipynb
@@ -523,7 +523,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For our exploratory data analysis we took a two-step approach to analyzing our data. First, we used a Random Forest Model to investigate the relative importance of the different factors in determining average rank on the \"New York Times Bestsellers\" List. Then, we individually analyzed each factor with a series of barplots and scatterplots, and compared each factor to the novel's average rank and its maximum amount of weeks on the list. A note must be made that we did not end up including the Publication season as a factor in our analysis because little relevance was found."
+    "We took a two-step approach to analyzing our data. First, we used a Random Forest Model to investigate the relative importance of the different factors in determining average rank on the \"New York Times Bestsellers\" List. Then, we individually analyzed each factor with a series of barplots and scatterplots, and compared each factor to the novel's average rank and its maximum amount of weeks on the list. We did not end up including the publication season as a factor in our analysis because little relevance was found."
    ]
   },
   {
