edits to factor 1 EDA

--- a/FinalProject_Group019-FA24.ipynb
+++ b/FinalProject_Group019-FA24.ipynb
@@ -653,11 +653,11 @@
    "metadata": {},
    "source": [
     "### Factor 1:\n",
-    "#### Celebrity Booklist\n",
+    "#### Inclusion on a Celebrity Booklist\n",
     "\n",
     "Figure 1 shows the average ranking of books on a celebrity booklist compared to books that were not on a celebrity booklist.\n",
     "\n",
-    "Figure 2 shows the average number of weeks on the NYT bestseller list books on a celebrity booklist were compared to the average number of weeks books that were not on a celebrity booklist were."
+    "Figure 2 shows the average number of weeks on the \"New York Times Bestseller\" list for books on a celebrity booklist compared to the average number of weeks on the \"New York Times Bestseller\" list for books that were not on a celebrity booklist."
    ]
   },
   {
@@ -715,9 +715,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The barplot shows that there is not much difference in average ranking based on a book's apperance on a celebrity booklist. It seems there's about a difference of 1 ranking spot between the two categories, where being on a celebrity booklist results in a higher rank on average. However, it should be noted that there were only 8 unique books found on a celebrity booklist out of the total 213 unique books on the NYT bestseller list.\n",
+    "The barplot shows that there is not much difference in average ranking based on a book's apperance on a celebrity booklist. It seems that there is a difference of about one rank between the two categories, and being on a celebrity booklist results in a higher rank on average. However, it should be noted that there were only 8 unique books found on a celebrity booklist out of the total 213 unique books on the \"New York Times Bestseller\" list (from 2020-2023).\n",
     "\n",
-    "Next we decided to compare if the books that made the celebrity book list did better than the books that did not make the list from another variable: the average number of weeks on the NYT bestsellers list."
+    "Next, we decided to examine if the books that made a celebrity book list did better than books that were not included on a celebrity book list based on another variable: the average number of weeks on the \"New York Times Bestseller\" list."
    ]
   },
   {
@@ -775,14 +775,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Figure 2 shows that there is a significant difference regarding the average number of weeks books have been on the NYT Bestseller list when differentiating them based on their presence on a celebrity booklist. It seems that most of the NYT Bestsellers that were found on a celebrity booklist were only recent additions to the Bestseller list, with some possibly being removed from the list soon after their debut. As mentioned with the previous barplot, the number of unique books found on a celebrity booklist is a small fraction of the total number of unique books on the Bestseller list, which may cause some large distinctions as shown above."
+    "Figure 2 shows that there is a significant difference regarding the average number of weeks books have been on the \"New York Times Bestseller\" list when differentiating them based on their presence on a celebrity booklist. It seems that most of the NYT Bestsellers that were found on a celebrity booklist were only recent additions to the bestseller list, with some possibly being removed from the list soon after their debut. As mentioned when analyzing the previous barplot, the number of unique books found on a celebrity booklist is a small fraction of the total number of unique books on the bestseller list, which may explain the large distinction shown above."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Overall, from our initial analysis the factor of \"being on a celebrity book list or not\" did not seem to at first glance significantly impact the data because so few books were on a celebrity book list. Out of the 213 unique books in our data set, only 8 qualified for this factor making it difficult for this factor to have impacted the data."
+    "Overall, the factor of \"inclusion on a celebrity book club list\" did not seem to, at first glance, significantly impact the data because so few books were on a celebrity book list. Out of the 213 unique books in our data set, only 8 qualified for this factor, making it difficult for this factor to have predictive value."
    ]
   },
   {
@@ -790,7 +790,7 @@
    "metadata": {},
    "source": [
     "### Factor 2:\n",
-    "#### Current Context\n",
+    "#### Inclusion of Current Context in Novel\n",
     "The next two graphs are used to conduct analysis on the current context factor. \n",
     "\n",
     "Figure 3 compares average ranking of books with current context.\n",
