edits to factor 2 EDA summary

--- a/FinalProject_Group019-FA24.ipynb
+++ b/FinalProject_Group019-FA24.ipynb
@@ -829,7 +829,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Figure 3 shows that books that include current context are ranked higher on the NYT best sellers list on average. Books that did not include current context had an average New York Times Bestseller rank of 10, while books that did include current context had approximately an average rank of 7. This is a significant difference in rank demonstrating a strong correlation between success of a book in terms of rank allotted by the publisher and whether the book references events and issues significant to the short term time period in which the book was published."
+    "Figure 3 shows that books that include current context are ranked higher on the \"New York Times Bestsellers\" list on average. Books that did not include current context had an average rank of 10, while books that did include current context had approximately an average rank of 7. This is a significant difference in rank, demonstrating a strong correlation between success of a book in terms of rank and whether the book references events and issues significant to the short term time period in which the book was published."
    ]
   },
   {
@@ -877,7 +877,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The scatterplot above plots each book based on its maximum weeks on the best sellers list and the maximum rank that the book reaches. Books that had current context are represented by a blue dot while books without it are represented with a green x symbol. There is no significant correlation between current context and max weeks. \n",
+    "The scatterplot above plots each book based on its maximum weeks on the bestseller list and the maximum rank that the book reaches. Books that had current context are represented by a blue dot while books without it are represented with a green cross (x symbol). There is no significant correlation between current context and max weeks on the list. \n",
     "\n",
     "Together, both parts of the current context analysis allow us to conclude that the inclusion of current context can contribute to a higher ranking on the list, but it does not create a significant impact on the the length of time that the book stays on the list."
    ]
