edit factor 3 and factor 4 EDA summaries

--- a/FinalProject_Group019-FA24.ipynb
+++ b/FinalProject_Group019-FA24.ipynb
@@ -889,9 +889,9 @@
     "### Factor 3:\n",
     "#### Rating of Book on Goodreads\n",
     "\n",
-    "Figure 5 is a scatter plot visualizes the relationship between the average New York Times rank (lower is better) and ratings of books.\n",
+    "Figure 5 is a scatterplot that visualizes the relationship between the average New York Times rank (lower is better) and ratings of books.\n",
     "\n",
-    "Figure 6 visualizes the Highest Rank overall vs the Max weeks on the list and is colored by the rating of the books."
+    "Figure 6 visualizes the highest rank overall vs max weeks on the list and is colored by the rating of the books."
    ]
   },
   {
@@ -974,11 +974,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Figure 5 shows the average rank of the book compared against the rating of the book. Better ratings are shown in warmer colors. Figure 5 shows us that there does not seem to be very much correlation between the average rank of book and their rating on Goodreads. \n",
+    "Figure 5 shows the average rank of the book compared against the rating of the book. Better ratings are shown in warmer colors. Figure 5 shows us that there does not seem to be a strong correlation between the average rank of a book and its rating on Goodreads. \n",
     "\n",
-    "Figure 6  plots each book based on its maximum weeks on the best sellers list and the maximum rank that the book reaches. Books that had better ratings are colored in lighter shades of green. There is no significant correlation between Goodreads rating and max weeks.\n",
+    "Figure 6 plots each book based on its maximum weeks on the bestseller list and the maximum rank that the book reaches. Books that had better ratings are colored in lighter shades of green. There is no significant correlation between Goodreads rating and max weeks.\n",
     "\n",
-    "However, we can clearly see that an overwhelming majority of the books do fall above the 3.8 and even 4.0 ratings. All of the books have a rating higher than 3.4. We can probably hypothesize that since the NYT best sellers list is a list of the 15 most elite books of any given week that all of them have above average ratings. It could be that within the best sellers list there is not much variation or correlation, but to be on the list at all a book must have an above average rating. However, it is unfeasible to test this hypothesis because we do not have a list of books that did not make the list so to speak."
+    "However, we can clearly see that an overwhelming majority of the books do fall above the 3.8 and even 4.0 ratings. All of the books have a rating higher than 3.4. We can hypothesize that since the \"New York Times Bestsellers\" list is a list of the 15 most elite books of any given week, all of them have above average ratings. It could be that within the bestseller list there is not much variation or correlation, but to be on the list at all, a book must have an above average rating. It is unfeasible to test this hypothesis because we do not have a list of books that were popular, and yet, did not make it onto the \"New York Times Bestseller\" list."
    ]
   },
   {
@@ -988,9 +988,9 @@
     "### Factor 4:\n",
     "#### Number of Awards Won\n",
     "\n",
-    "Figure 7 is a scatter plot that shows the relationship between the number of awards a book has won and its average NYT rank, with lower ranks (indicating better performance) positioned higher on the plot.\n",
+    "Figure 7 is a scatterplot that shows the relationship between the number of awards a book has won and its average NYT rank, with lower ranks (indicating better performance) positioned higher on the plot.\n",
     "\n",
-    "Figure 8 visualizes the Highest Rank overall vs the Max weeks on the list and is colored by the number of awards a book won."
+    "Figure 8 visualizes the highest rank overall vs max weeks on the list and is colored by the number of awards a book won."
    ]
   },
   {
@@ -1074,9 +1074,9 @@
    "source": [
     "Figures 7 shows little correlation between number of awards won and average rank. Most of the books won 0 to 3 awards.\n",
     "\n",
-    "Figure 8 plots the max weeks on the list versus the max rank and is colored by the number of awards won. Since most of the books won a similar number of awards there is not a correlation.\n",
+    "Figure 8 plots the max weeks on the list versus the max rank and is colored by the number of awards won. Since most of the books won a similar number of awards, there is no correlation between these factors.\n",
     "\n",
-    "Overall, this factor does not seem to have much of an influence on how well a book did on the list."
+    "Overall, this factor does not seem to have much of an influence on how well a book did on the \"New York Times Bestseller\" list."
    ]
   },
   {
