final edits to EDA section

--- a/FinalProject_Group019-FA24.ipynb
+++ b/FinalProject_Group019-FA24.ipynb
@@ -1086,7 +1086,7 @@
     "### Factor 5:\n",
     "#### Number of Author Bestsellers\n",
     "\n",
-    "From our previous analysis, we were able to identify that the factor which contributed most to the Average Ranking of Each Book on the List was the # of Author Bestsellers. It may be prudent to graph out the relationship between these two factors. It makes a certain kind of sense intuitively, as an author with more prior bestsellers is more well-known to both the Bestsellers Committee and the general audience, and thus, their successive works are more likely to be on the list as well."
+    "From our previous analysis, we were able to identify that the factor which contributed most to the average rank of each book on the list was the # of author previous bestsellers. It may be prudent to graph out the relationship between these two factors. It makes a certain kind of sense intuitively, as an author with more prior bestsellers is more well-known to both the Bestsellers Committee and the general audience, and thus, their successive works are more likely to be on the list as well."
    ]
   },
   {
@@ -1128,7 +1128,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "There isn't too strong a relationship between the number of author bestsellers and the average rannkings of these titles, but there seems to be a weak positive corrrelation, if anything. However, we can attempt to reduce the condensation of data near the smaller numbers by adding a logarithmic metric to the x-axis, to see if the distribution is clearer."
+    "There isn't too strong a relationship between the number of author bestsellers and the average rankings of these titles, but there seems to be a weak positive corrrelation, if anything. However, we can attempt to reduce the condensation of data near the smaller numbers by adding a logarithmic metric to the x-axis, to see if the distribution is clearer."
    ]
   },
   {
@@ -1173,7 +1173,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Overall, we can see that a logarithmic transformation doesn't make a significant difference in the shape of the graph. The graph still depicts a weak positive correlation, although now, that weak correlation gets stronger as the graph moves to the right. This may be enough to imply a sense of loose correlation between these two factors, but certainly not enough to prove significance. This means that on a general note, having more books on the list does increase your ranking on the list, but this is not always the case. There is also a concentration of books on the list who have only been there for a day, and have average rankings throughout the entire range of the graph. Therefore, this factor yields an inconclusive result overall."
+    "Overall, we can see that a logarithmic transformation doesn't make a significant difference in the shape of the graph. The graph still depicts a weak positive correlation, although now, that weak correlation gets stronger as the graph moves to the right. This may be enough to imply a sense of loose correlation between these two factors, but certainly not enough to prove strong significance. This means that on a general note, having more books on the list does increase your ranking on the list, but this is not always the case. There is also a concentration of books on the list who have only been there for a day, and have average rankings throughout the entire range of the graph. "
    ]
   },
   {
